src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>AXDiscount__c</fullName>
        <formula>1 - ( UnitPrice / AXRetailPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AX Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AXRetailPrice__c</fullName>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_for_Sample_in_AX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account for Sample in AX</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>DENTSPLY</value>
            </filterItems>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Sales Rep</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Discounted__c</fullName>
        <formula>If(TEXT(Order.User_CountryPL__c)= &apos;Indonesia&apos; &amp;&amp; CONTAINS(Order.Pricebook2.Name,&quot;NET PRICE&quot;),If(ISNULL(Discount_Percent__c), 0 , Quantity * NettPrice__c * Discount_Percent__c), Unit_price_formula_c__c * Discount_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Discounted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalLevelInt__c</fullName>
        <formula>CASE(ApprovalLevel__c, &apos;Manager&apos;, 1, &apos;Area Director&apos;, 2, &apos;Sales Director&apos;, 3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalLevel__c</fullName>
        <formula>IF(OR(IF( PricebookEntry.Primary__c = true, (UnitPrice *(1- Discount_Percent__c)&gt; PricebookEntry.ApprovalLevel1__c), Order.ApprovalLevelSecondaryInt__c = 0), AND((Order.Order_Amount_global__c - Total_Line_Item_Price__c)&gt;= PricebookEntry.FreeProductThreshold__c* Quantity,UseCoupon__c = true,(Order.Order_Amount_global__c - Total_Line_Item_Price__c)&gt; Order.UsedCouponsValue__c), AND(Offer_Code_dna__c!=null, Offer_Code_dna__r.QuantityLimit__c &gt;= Quantity)), null, IF(OR(AND(PricebookEntry.Primary__c = false, Order.ApprovalLevelSecondaryInt__c = 3), AND(PricebookEntry.Primary__c = true, UnitPrice *(1- Discount_Percent__c)&lt;= PricebookEntry.ApprovalLevel3__c)), &quot;Sales Director&quot;, IF(OR(AND(PricebookEntry.Primary__c = false, Order.ApprovalLevelSecondaryInt__c = 2), AND(PricebookEntry.Primary__c = true, UnitPrice *(1- Discount_Percent__c)&lt;= PricebookEntry.ApprovalLevel2__c)),&quot;Area Director&quot;,&quot;Manager&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <formula>PricebookEntry.Product2.Article__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableCouponCode__c</fullName>
        <formula>IF(AND(
OR((Order.Order_Amount_global__c - Total_Line_Item_Price__c)&gt;=  PricebookEntry.FreeProductThreshold__c * Quantity, UseCoupon__c = true), NOT(ISNULL(PricebookEntry.FreeProductThreshold__c))), TEXT(PricebookEntry.FreeProductThreshold__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Coupon Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>PricebookEntry.Product2.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountApproval_Line_Item__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Approval Line Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Eval__c</fullName>
        <formula>IF( AND(Discount_Percent__c  &gt; 0, (LEN( Text(Sales_Special__c))&gt;0)),&quot;NO APPROVAL NEEDED&quot;, 

IF(AND(Discount_Percent__c  &gt; 0,(LEN( Text(Sales_Special__c))=0)), &quot;YES - APPROVAL NEEDED&quot;,

IF(Discount_Percent__c  &gt; 0, &quot;YES - APPROVAL NEEDED&quot;,
IF(Discount_Percent__c   = 0, &quot;NO APPROVAL NEEDED&quot;,

&quot;YES&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Approval Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountedAmount__c</fullName>
        <formula>If(ISNULL(Discount_Percent__c), 0 ,  Quantity * UnitPrice * Discount_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distr__c</fullName>
        <label>Distributor price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_Account_for_Sample__c</fullName>
        <formula>if( isblank(Account_for_Sample_in_AX__c),&quot;&quot;,Account_for_Sample_in_AX__r.Movex__c &amp;&quot; - &quot; &amp;  Account_for_Sample_in_AX__r.Name )</formula>
        <label>ERP Account for Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Of_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Of Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_of_Charge_Delivery__c</fullName>
        <description>Used to state who should deliver a free of charge item - it can be either a dealer, Dentsply Sirona Customer Service or given directly during meeting by Sales Rep</description>
        <label>Free of Charge Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_at_100__c</fullName>
        <formula>IF( Discount_Percent__c  &gt; 0.99,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item at 100%?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineApprovalLevel__c</fullName>
        <formula>IF( OR(UnitPrice *(1- Discount_Percent__c)&gt; PricebookEntry.ApprovalLevel1__c, AND(Offer_Code_dna__c!=null, Offer_Code_dna__r.QuantityLimit__c &gt;= Quantity)), null, IF(UnitPrice *(1- Discount_Percent__c)&lt;= PricebookEntry.ApprovalLevel3__c, &quot;Sales Director&quot;, IF(UnitPrice *(1- Discount_Percent__c)&lt;= PricebookEntry.ApprovalLevel2__c,&quot;Area Director&quot;,&quot;Manager&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LowerGuidance__c</fullName>
        <description>#5314 - Margin Guidance Calculation Process</description>
        <label>Lower Guidance (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTF_EvaluationNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTF Evaluation Line Item</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTF_Evaluation__c</fullName>
        <formula>CASE( PricebookEntry.Product2.Article__c ,
&quot;US228005&quot;, 1,
&quot;US228010&quot;, 1,
&quot;US228025&quot;, 1,
&quot;US420038&quot;,1,
&quot;US420039&quot;,1,
&quot;US420075&quot;, 1,
&quot;US420076&quot;,1,
&quot;US420077&quot;, 1,
&quot;US420078&quot;,1,
&quot;US400175&quot;,1,
&quot;US400173&quot;, 1,
&quot;US400174&quot;,1,
&quot;US400191&quot;,1,
&quot;US400192&quot;,1,
&quot;US400175&quot;, 1,
&quot;US400176&quot;,1,
&quot;US400177&quot;,1,
&quot;US400178&quot;,1,
&quot;US791101&quot;, 1,
&quot;US791102&quot;, 1,
&quot;US791104&quot;, 1,
&quot;US791204&quot;, 1,
&quot;US790101&quot;, 1,
&quot;US790102&quot;, 1,
&quot;US790104&quot;, 1,
&quot;US790202&quot;, 1,
&quot;US790204&quot;, 1,
&quot;US400193&quot;, 1,
&quot;US420048&quot;, 1,
&quot;US400172&quot;, 1,
&quot;US400178&quot;, 1,
&quot;US400194&quot;, 1,
&quot;US420049&quot;, 1,

&quot;US600172&quot;, 1,
&quot;US600173&quot;, 1,
&quot;US600174&quot;, 1,
&quot;US600175&quot;, 1,
&quot;US600176&quot;, 1,
&quot;US600177&quot;, 1,
&quot;US600178&quot;, 1,
&quot;US600191&quot;, 1,
&quot;US600192&quot;, 1,
&quot;US600193&quot;, 1,
&quot;US600194&quot;, 1,
&quot;US620038&quot;, 1,
&quot;US620039&quot;, 1,
&quot;US620048&quot;, 1,
&quot;US620049&quot;, 1,
&quot;US620075&quot;, 1,
&quot;US620076&quot;, 1,
&quot;US620077&quot;, 1,
&quot;US620078&quot;, 1,


0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTF Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarginGuidanceIndicator__c</fullName>
        <formula>IF ( MarginGuidance__c == null, 
 &apos;n/a&apos;,
 IF(
    Margin__c  &gt;  UpperGuidance__c ,
    IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;, 20,20),
    IF(
        AND(Margin__c &lt;= UpperGuidance__c, Margin__c &gt;=  LowerGuidance__c ),
        IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;, 20,20),
        IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 20,20)

    )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Guidance Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarginGuidance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Guidance</label>
        <referenceTo>MarginGuidance__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>#5314 - Margin Guidance Calculation Process</description>
        <label>Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NettPrice__c</fullName>
        <formula>ListPrice / 1.11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nett Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Contract__c</fullName>
        <formula>PricebookEntry.No_Contract__c</formula>
        <label>No Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_SIMPLANT_Evaluation__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Populated by a workflow update, this enables the order to evaluate how many Simplant/Non Simplant Line items are on this order for Approval Process Purposes</inlineHelpText>
        <label>Non-SIMPLANT Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Items_at_100_Discount__c</fullName>
        <label>Number of Items at 100% Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Code_Applied_Number__c</fullName>
        <description>Updated by the Order Product Process Builder and used in the Roll Up Summary field on the Order</description>
        <label>Offer Code Applied Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Code_Name__c</fullName>
        <description>Prints the name of the offer code, if one is applied</description>
        <formula>Offer_Code_dna__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code_dna__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Offer_Code__c.Offer_Code_Status__c</field>
                <operation>notEqual</operation>
                <value>Expired</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Offer_Code__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Taken from Product Group Level 4 on the Product Object</description>
        <formula>PricebookEntry.Product2.PG4_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>PricebookEntry.Product2.Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>PricebookEntry.Product2.PG2_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <formula>PricebookEntry.Retail_Price__c</formula>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <description>Used for tracking rewards in UK</description>
        <label>Reward (UK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is activated.</description>
        <inlineHelpText>Indicates if the order product is activated.</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset created from this order product</description>
        <inlineHelpText>Asset created from this order product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets
            you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price that is applied to this order product at order creation time.</description>
        <inlineHelpText>The block price that is applied to this order product at order creation time.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BookingsIndicator__c</fullName>
        <description>Indicates whether bookings are included.</description>
        <inlineHelpText>Indicates whether bookings are included.</inlineHelpText>
        <label>Bookings Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BookingsIndicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleRoot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The root bundle parent Order Product of components. This component will be deleted if its bundle root is deleted.</description>
        <inlineHelpText>An internally used field that points to the root of its bundle parent.</inlineHelpText>
        <label>Bundle Root</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Bundle Root)</relationshipLabel>
        <relationshipName>BundleChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractAction__c</fullName>
        <description>The contract action where this order product is resulted from.</description>
        <inlineHelpText>The contract action where this order product is resulted from.</inlineHelpText>
        <label>Contract Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract of the subscription that is created from this order product.</description>
        <inlineHelpText>The contract of the subscription that is created from this order product.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is contracted.</description>
        <inlineHelpText>Indicates if the order product is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>Controls the contracting behavior of an Order Product. &quot;Inherit&quot; uses the behavior of the parent Order. &quot;Contract Separately&quot; generates a separate Contract for
            the Order Product. &quot;No Contract&quot; skips the Order Product altogether during the contracting process.</description>
        <inlineHelpText>Controls the contracting behavior of an Order Product.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Contract Separately</fullName>
                </value>
                <value>
                    <fullName>Do Not Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <description>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</description>
        <inlineHelpText>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</inlineHelpText>
        <label>Segment Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule applied to this order product.</description>
        <inlineHelpText>Discount schedule applied to this order product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProductBookings__c</fullName>
        <description>Amount of the order product’s total price.</description>
        <formula>IF( ISPICKVAL(SBQQ__BookingsIndicator__c  , &apos;Include&apos;) , UnitPrice * Quantity , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of the order product’s total price.</inlineHelpText>
        <label>Order Product Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderedQuantity__c</fullName>
        <description>The actual quantity of the product placed in the order.</description>
        <inlineHelpText>The actual quantity of the product placed in the order.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the price dimension applied to this order product.</description>
        <inlineHelpText>References the price dimension applied to this order product.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price schedule applied to this order product.</description>
        <inlineHelpText>Price schedule applied to this order product.</inlineHelpText>
        <label>Price Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionType__c</fullName>
        <description>Set the order item&apos;s product subscription type.</description>
        <inlineHelpText>Set the order item&apos;s product subscription type.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute Prorated Price.</description>
        <inlineHelpText>Calculated ratio used to compute Prorated Price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this order product is created from.</description>
        <inlineHelpText>The quote line where this order product is created from.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
        <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
        <label>Quoted List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedQuantity__c</fullName>
        <description>The quoted quantity.</description>
        <inlineHelpText>The quoted quantity.</inlineHelpText>
        <label>Quoted Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedOrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the order product that this order product revises.</description>
        <inlineHelpText>References the order product that this order product revises.</inlineHelpText>
        <label>Revised Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Revised Order Product)</relationshipLabel>
        <relationshipName>RevisingOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</description>
        <inlineHelpText>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>ShippingAccountOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>The current state of the order product.</description>
        <inlineHelpText>Indicates the current state of the order product. It is defaulted to Draft when an order is created.</inlineHelpText>
        <label>Activation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__OrderProductStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</description>
        <inlineHelpText>Indicates how the subscription price is calculated. If this is blank, the line items is not a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionPricing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <label>Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription created from this order product</description>
        <inlineHelpText>Subscription created from this order product</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>SubscriptionOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>Estimated tax amount</description>
        <inlineHelpText>Estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>